[package]
name = "hdlcparse"
version = "1.0.0"
edition = "2021"
authors = ["Jakob Leifhelm"]
readme = "README.md"
license = "MPL-2.0"
description = "A `no_std` library for parsing HDLC frames."
homepage = "https://github.com/leifhelm/hdlcparse"
repository = "https://github.com/leifhelm/hdlcparse"

[dependencies]
nom = { version = "^7.1", default-features = false }

[features]
default = ["std"]
std = ["nom/std"]
